feat: exercise correction

--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
 </head>
 <body>
     
+    <div id="secretNumbers"></div>
 
-
-
+    <hr>
+    <div id="inputElementsContainer">
+        <input placeholder="" id="number1"></input><br>
+        <input placeholder="" id="number2"></input><br>
+        <input placeholder="" id="number3"></input><br>
+        <input placeholder="" id="number3"></input><br>
+        <input placeholder="" id="number4"></input>
+    
+        <button id="checkButton">Check</button>
+    </div>
+    <hr>
+    <div id="outputText"></div>
 
     <script src="script.js"></script>
 </body>
