feat: debug sintax errors

--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
     <div id="secretNumbers"></div>
 
     <hr>
-    <div id="inputElementsContainer">
+    <div id="inputElementsContainer" style="display: none">
         <input placeholder="" id="number1"></input><br>
         <input placeholder="" id="number2"></input><br>
         <input placeholder="" id="number3"></input><br>
         <input placeholder="" id="number3"></input><br>
-        <input placeholder="" id="number4"></input>
-    
+        <input placeholder="" id="number4"></input><br>
         <button id="checkButton">Check</button>
     </div>
     <hr>
