feat: finished correction

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <hr>
     <div id="inputElementsContainer" style="display: none">
-        <input placeholder="" id="number1"></input><br>
-        <input placeholder="" id="number2"></input><br>
-        <input placeholder="" id="number3"></input><br>
-        <input placeholder="" id="number3"></input><br>
-        <input placeholder="" id="number4"></input><br>
+        <input type="text" placeholder="Inserisci il primo numero" id="number1"><br>
+        <input type="text" placeholder="Inserisci il secondo numero" id="number2"><br>
+        <input type="text" placeholder="Inserisci il terzo numero" id="number3"><br>
+        <input type="text" placeholder="inserisci il quarto numero" id="number4"><br>
+        <input type="text" placeholder="Inserisci il quinto numero" id="number5"><br>
         <button id="checkButton">Check</button>
     </div>
     <hr>
